# hors

./: display.py  flake.nix  horse.py  main.py  pricing.py  pyproject.toml  shell.nix  simulation.py  state.json
data/: names.txt
src/hors/: cli.py  data.py  main.py  models.py  odds.py  seed_state.py  sim.py  state.json  state.py
